# oftc-hybrid

./: .clang-format  .cvsignore  .gitignore  .gitmodules  .indent.pro  .travis.yml  AUTHORS  BUGS  COPYING  ChangeLog  ChangeLog.oftc  HOWTO-CVS  Hybrid-team  INSTALL  LICENSE  Makefile.am  Makefile.in  NEWS  README  README.FIRST  README.PLATFORMS  README.VMS  RELNOTES  TODO  TODO.oftc  acinclude.m4  aclocal.m4  autogen.sh  clean.com  common.gypi  config.h.in  configure  configure.ac  doxygen.conf  foo  ircd.vcxproj  ircd.vcxproj.filters  libtool  libuv-ldflags.sh  make.com  (+6 more)
.github/workflows/: ci.yaml
adns/: Makefile.in  README.ircd  adns.h  check.c  descrip.mms  dlist.h  event.c  general.c  internal.h  parse.c  query.c  reply.c  setup.c  transmit.c  tvarith.h  types.c
autoconf/: acconfig.h  configure.in  install-sh
contrib/: Makefile.am  Makefile.in  README  README.LMH  README.cloaking  README.disable_identd  challenge.irc  disable_identd.diff  example_module.c  ip_cloaking.c  ircd-hybrid.spec  ircd.init.in  libc_vprintf.c  m_capture.c  m_change.c  m_classlist.c  m_clearchan.c  m_ctrace.c  m_flags.c  m_force.c  m_help.c  m_jupe.c  m_killhost.c  m_ltrace.c  m_map.c  m_mkpasswd.c  m_ojoin.c  m_omotd.c  m_operspy.c  m_opme.c  m_services.c  m_spoof.c  m_tburst.c  m_webirc.c  m_whois.c  setup-win32.h  spy_admin_notice.c  spy_info_notice.c  spy_links_notice.c  spy_motd_notice.c  (+7 more)
contrib/help/: Makefile.in
debian/: README.Debian  changelog  control  copyright  dirs  init.d  ircd.conf  logrotate  postinst  postrm  rules  watch
debian/patches/: alpha-fix  defaults  destdir  respond-manpage  series
doc/: CIDR.txt  LazyLinks.txt  Makefile.am  Makefile.in  challenge.txt  channels.txt  convertconf-example.conf  doxygen.conf  example.conf  example.conf.quick  example.efnet.conf  example.quick.conf  guidelines.txt  index.txt  ircd.8  ircd.motd  kline.txt  messages.txt  modeg.txt  modes.txt  operguide.txt  resv.txt  server-version-info  serverhide.txt  simple.conf  vchans.txt  whats-new.txt
doc/old/: Etiquette  example.conf.trillian  example_old.conf  simple.conf
doc/technical/: Persistent_Clients.txt  README.openssl  cryptlink.txt  debug_api.txt  event.txt  fd-management.txt  file-management.txt  hostmask.txt  iauth.txt  index.txt  linebuf.txt  message-customisation.txt  network.txt  (+5 more)
etc/: Makefile.am  Makefile.in  example.conf  example.conf.in  example.conf.quick  example.conf.quick.in  example.efnet.conf  example.efnet.conf.in  example.quick.conf  ircd.json  simple.conf
help/: Makefile.am  Makefile.in
help/opers/: Makefile.am  Makefile.in  cjoin  cmode  dline  index  join  kline  list  motd  omotd  privmsg  rehash  rkline  set  shedding  stats  umode  ungline  unkline  unresv  unxline  version  xline
help/users/: Makefile.am  Makefile.in  index  umode
iauth/: BROKEN  Makefile.in
include/: Makefile.am  Makefile.in  balloc.h  channel.h  channel_mode.h  class.h  client.h  cluster.h  common.h  conf.h  conf_admin.h  conf_channel.h  conf_class.h  conf_general.h  conf_listen.h  conf_logging.h  conf_modules.h  conf_serverhide.h  conf_serverinfo.h  config-win32.h  config.h  config.h.dist  dalloca.h  dbuf.h  defaults.h  event.h  fdlist.h  fileio.h  handlers.h  hash.h  hook.h  hostmask.h  inet_misc.h  irc_getnameinfo.h  irc_res.h  irc_reslib.h  irc_string.h  ircd.h  ircd_defs.h  ircd_getopt.h  (+52 more)
include/conf/: conf.h  manager.h
lib/: Makefile.am  Makefile.in
libio/: Makefile.in  hook.c  irc_libio.h  libio.h  log.c
libltdl/: Makefile.in  configure  libtool
m4/: compiler.m4  options.m4
messages/: Makefile.am  Makefile.in  README  ayb.lang  ayb.po  build_one  create_po  custom.lang  custom.po  ircd-brazilian_pt.lang  ircd-bulgarian.lang  ircd-croatian.lang  ircd-danish.lang  ircd-dutch.lang  ircd-french.lang  ircd-german.lang  ircd-italian.lang  ircd-norwegian.lang  ircd-polish.lang  ircd-romanian.lang  ircd-russian.lang  ircd-spanish.lang  ircd-standard.example.lang  ircd-swedish.lang
messages/translations/: Makefile.in  README  ircd-croatian.po  ircd-danish.po  ircd-dutch.po  ircd-german.po  ircd-norwegian.po  ircd-spanish.po  ircd-swedish.po
modules/: .cvsignore  .depend  Makefile.am  Makefile.in  descrip.mms  m_accept.c  m_admin.c  m_auth.c  m_away.c  m_cap.c  m_capab.c  m_capture.c  m_cburst.c  m_certfp.c  m_challenge.c  m_cjoin.c  m_close.c  m_connect.c  m_cryptlink.c  m_cs.c  m_dline.c  m_dmem.c  m_drop.c  m_encap.c  m_eob.c  m_etrace.c  m_gline.c  m_globops.c  m_gnotice.c  m_hash.c  m_help.c  m_hs.c  m_info.c  m_invite.c  m_ison.c  m_join.c  m_kline.c  m_knock.c  m_links.c  m_list.c  (+65 more)
modules/core/: Makefile.am  Makefile.in  descrip.mms  m_die.c  m_die.vcxproj  m_die.vcxproj.filters  m_error.c  m_error.filters  m_error.vcxproj  m_join.c  m_join.filters  m_join.vcxproj  m_kick.c  m_kick.filters  m_kick.vcxproj  m_kill.c  m_kill.filters  m_kill.vcxproj  m_message.c  m_message.filters  m_message.vcxproj  m_mode.c  m_mode.filters  m_mode.vcxproj  m_nick.c  m_nick.filters  m_nick.vcxproj  m_part.c  m_part.filters  m_part.vcxproj  m_quit.c  m_quit.filters  m_quit.vcxproj  m_server.c  m_server.filters  m_server.vcxproj  m_sjoin.c  m_sjoin.filters  m_sjoin.vcxproj  m_squit.c  (+10 more)
oftc-hybrid-1.5/: TODO.oftc
servlink/: .cvsignore  Makefile.am  Makefile.in  README  TODO  control.c  control.h  descrip.mms  io.c  io.h  servlink.c  servlink.h  setup.h.in
src/: .cvsignore  .depend  Makefile.am  Makefile.in  adns.c  balloc.c  basename.c  channel.c  channel_mode.c  class.c  client.c  cluster.c  conf.c  conf_admin.c  conf_channel.c  conf_class.c  conf_general.c  conf_lexer.c  conf_lexer.l  conf_listen.c  conf_logging.c  conf_modules.c  conf_parser.c  conf_parser.h  conf_parser.y  conf_serverhide.c  conf_serverinfo.c  config.c  crypt.c  csvlib.c  dbuf.c  descrip.mms  dynlink.c  event.c  fdlist.c  fileio.c  getopt.c  hash.c  hook.c  hostmask.c  (+66 more)
src/conf/: conf.c  lex.yy.c  lexer.l  parser.y  y.tab.c  y.tab.h
tools/: Makefile.in  README  README.mkpasswd  convertconf.c  convertilines.c  convertklines.c  descrip.mms  encspeed.c  mkkeypair  mkpasswd.c  respond.c  untabify  viconf.c
(+217 files in other folders)
